Apache Tez Change Log
=====================

Release 0.9.0: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3337. Do not log empty fields of TaskAttemptFinishedEvent to avoid confusion.
  TEZ-3303. Have ShuffleVertexManager consume more precise partition stats.
  TEZ-1248. Reduce slow-start should special case 1 reducer runs.
  TEZ-3327. ATS Parser: Populate config details available in dag.
  TEZ-3325. Flaky test in TestDAGImpl.testCounterLimits.
  TEZ-3323. Update licese and notice for xml-apis jar. Also update year in notice to 2016.
  TEZ-3223. Support a NullHistoryLogger to disable history logging if needed.
  TEZ-3313. ATSFileParser : Wrong args passed in VersionInfo.
  TEZ-3286. Allow clients to set processor reserved memory per vertex (instead of per container).
  TEZ-3293. Fetch failures can cause a shuffle hang waiting for memory merge that never starts.
  TEZ-3314. Double counting input bytes in MultiMRInput.
  TEZ-3308. Add counters to capture input split length.
  TEZ-3302. Add a version of processorContext.waitForAllInputsReady and waitForAnyInputReady with a timeout.
  TEZ-3291. Optimize splits grouping when locality information is not available.
  TEZ-3305. TestAnalyzer fails on Hadoop 2.7.
  TEZ-3304. TestHistoryParser fails with Hadoop 2.7.
  TEZ-3216. Add support for more precise partition stats in VertexManagerEvent.
  TEZ-3296. Tez job can hang if two vertices at the same root distance have different task requirements
  TEZ-3294. DAG.createDag() does not clear local state on repeat calls.
  TEZ-3297. Deadlock scenario in AM during ShuffleVertexManager auto reduce.
  TEZ-3296. Tez fails to compile against hadoop 2.8 after MAPREDUCE-5870
  TEZ-3295. TestOrderedWordCount should handle relative input/output paths.
  TEZ-3290. Set full task attempt id string in MRInput configuration object.
  TEZ-2846. Flaky test: TestCommit.testVertexCommit_OnDAGSuccess.
  TEZ-3289. Tez Example MRRSleep job does not set Staging dir correctly on secure cluster.