@@ -7,6 +7,7 @@ INCOMPATIBLE CHANGES
 
 ALL CHANGES:
 
+  TEZ-3235. Modify Example TestOrderedWordCount job to test the IPC limit for large dag plans.
   TEZ-3337. Do not log empty fields of TaskAttemptFinishedEvent to avoid confusion.
   TEZ-3303. Have ShuffleVertexManager consume more precise partition stats.
   TEZ-1248. Reduce slow-start should special case 1 reducer runs.
